# jami-daemon

./: .clang-format  .clang-tidy  .cproject  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  .packer.json  .packer.yml  .project  0001-WIP-audio-multistream.patch  0001-audiosharing-ut.patch  AGENTS.md  AUTHORS  BUILD.md  CHANGES  CMakeLists.txt  CODING  CONTRIBUTING.md  COPYING  ChangeLog  DEPS  Dockerfile  Doxyfile  FIXME  INSTALL  INSTALL.md  LICENSE  Makefile  Makefile.am  Makefile.cvs  NEWS  NewLinkDevImpl--transfer_account_archive_over_channel_expanded_v3r2_OTP.md  PUBLISHING.md  README  README.cvs  README.md  SPEC_LINKDEV.md  SPEC_LINKDEV_V3.md  (+47 more)
daemon/: .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.gentoo  autogen.sh  config.h  configure-android.sh  configure.ac  globals.mak
daemon/ccccreports/: cccc.xml
daemon/contrib/: bootstrap
daemon/doc/: Makefile.am  README
daemon/libs/: Makefile.am  README.libiax2  compile_pjsip.sh
daemon/m4/: ax_lib_expat.m4
daemon/man/: Makefile.am  dring.pod  sflphoned.pod
daemon/ringtones/: Makefile.am
daemon/src/: Android.mk  Codec.h  JavaJNI2CJNI_Load.py  Makefile.am  account.cpp  account.h  account_factory.cpp  account_factory.h  account_schema.h  array_size.h  call.cpp  call.h  call_factory.cpp  call_factory.h  cc_config.h  cc_thread.h  codec.h  com_savoirfairelinux_sflphone_client_ManagerImpl.h  conference.cpp  conference.h  dlfcnWin32.c  dlfcnwin32.c  dlfcnwin32.h  enumclass_utils.h  eventthread.cpp  eventthread.h  fileutils.cpp  fileutils.h  global.h  ice_socket.h  ice_transport.cpp  ice_transport.h  intrin.h  ip_utils.cpp  ip_utils.h  jni-xml2cpp.py  logger.c  logger.cpp  logger.h  main.cpp  (+42 more)
daemon/test/: Makefile.am  accounttest.cpp  accounttest.h  audiobuffertest.cpp  hooktest.h  (+55 more)
gnome/: .cproject  .gitignore  .project  Makefile.am  autogen.sh  configure.ac  globals.mak  sflphone.desktop.in
kde/: .gitignore  CMakeLists.txt  Doxyfile  config.sh
man/: Makefile.am  README.manpages  dring.pod  jamid.pod  sflphone.pod  sflphoned.pod
plugins/: .gitignore  Makefile.am  README  configure.ac  globals.mak
po/: Makefile.am  README  de.po  es.po  es.po.rej  fr.po  languages.pot  ru.po  sflphone.pot  zh_CN.po  zh_HK.po
portaudio/: Makefile.am
ring-gtk/: .gitignore  CMakeLists.txt
ringtones/: Makefile.am  default.opus  default.wav.LICENSE  jami-electric-bell-500-phone.opus  jami-home-phone.opus  jami-loop-mix.opus  meson.build
sflphone-client-gnome/: .cproject  .project  INSTALL  Makefile.am  VERSION  autogen.sh  config.h.in  configure.ac  globals.mak  sflphone-client-gnome.schemas  sflphone.desktop.in
sflphone-client-kde/: AUTHORS  Account.cpp  Account.h  AccountItemWidget.cpp  AccountItemWidget.h  AccountList.cpp  AccountList.h  AccountWizard.cpp  ActionSetAccountFirst.cpp  ActionSetAccountFirst.h  CMakeLists.txt  Call.cpp  Call.h  CallList.cpp  CallList.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  Contact.cpp  ContactItemWidget.cpp  ContactItemWidget.h  DEVELOPPER  INSTALL  README  SFLPhone.cpp  SFLPhone.h  VERSION  callmanager_interface_singleton.cpp  callmanager_interface_singleton.h  config.sh  configurationmanager_interface_singleton.cpp  configurationmanager_interface_singleton.h  install.sh  instance_interface_singleton.cpp  instance_interface_singleton.h  main.cpp  metatypes.h  resources.qrc  sflphone-client-kde.desktop  sflphone-client-kde.kdevelop  (+4 more)
sflphone-common/: .cproject  .project  ChangeLog  Makefile  Makefile.am  NEWS  README  README.gentoo  VERSION  autogen.sh  config.h  config.status  configure.ac  globals.mak  sequence2.yml  sequenceParser.yml
sflphone-gtk/: .cproject  Makefile.am  README  autogen.sh  config.h  config.status  configure  configure.ac  globals.mak  log4crc  sflphone.desktop.in  view
sflphone-plugins/: Makefile.am  README  configure.ac  globals.mak
sflphone_kde/: Account.cpp  Account.h  AccountItemWidget.cpp  AccountItemWidget.h  AccountList.cpp  AccountList.h  AccountWizard.cpp  AccountWizard.h  Automate.cpp  Automate.h  CMakeLists.txt  Call.cpp  Call.h  CallList.cpp  CallList.h  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  Contact.cpp  Contact.h  ContactItemWidget.cpp  ContactItemWidget.h  Doxyfile  SFLPhone.cpp  SFLPhone.h  TargetDistclean.cmake  callmanager-introspec.xml  callmanager_interface.cpp  callmanager_interface_p.h  callmanager_interface_singleton.cpp  callmanager_interface_singleton.h  config_en.ts  configurationmanager-introspec.xml  configurationmanager_interface.cpp  configurationmanager_interface_p.h  configurationmanager_interface_singleton.cpp  configurationmanager_interface_singleton.h  install.sh  instance_interface.cpp  instance_interface_p.h  (+19 more)
src/: AlsaPreference.h  AudioPreference.h  CDataFile.cpp  CDataFile.h  CMakeLists.txt  GeneralPreference.h  Makefile  Makefile.am  PulseAudioPreference.h  account.cpp  account.h  account_config.cpp  account_config.h  account_factory.cpp  account_factory.h  account_schema.h  accountcreator.cpp  accountcreator.h  aixaccount.cpp  aixaccount.h  archiver.cpp  archiver.h  array_size.h  audiobuffer.cpp  audiobuffer.h  audiocodec.cpp  audiocodec.h  audiodrivers.cpp  audiodrivers.h  audiodriversalsa.cpp  audiodriversalsa.h  audiodriversoss.cpp  audiodriversoss.h  audiortp.cpp  audiortp.h  base64.c  base64.cpp  base64.h  blocking-queue.h  buildinfo.cpp  (+202 more)
test/: .gitignore  Makefile.am  README  TestMain.cpp  accounttest.cpp  accounttest.h  audiobuffertest.cpp  audiobuffertest.h  audiocodectest.cpp  audiocodectest.h  audiolayertest.cpp  audiolayertest.h  audiorecorderTest.cpp  audiorecorderTest.h  configurationTest.cpp  configurationTest.h  configurationtest.cpp  configurationtest.h  constants.h  dring-sample.yml  findPath.h  history-sample.tpl  historytest.cpp  historytest.h  hookmanagerTest.cpp  hookmanagerTest.h  hooksTest.h  hooktest.cpp  hooktest.h  instantmessagingtest.cpp  instantmessagingtest.h  iptest.cpp  iptest.h  main.cpp  mainbuffertest.cpp  meson.build  numbercleanerTest.cpp  numbercleanerTest.h  numbercleanertest.cpp  numbercleanertest.h  (+18 more)
(+9829 files in other folders)
